--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 
-<head lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -11,13 +11,13 @@
         {
             "@context": "https://schema.org",
             "@type": "WebSite",
-            "name": "Smart Watche",
-            "url": "https://smart-watch.netlify.app/",
+            "name": "Cheap Smart Watchs",
+            "url": "https://smart-watch-shops.netlify.app/",
             "potentialAction": {
                 "@type": "SearchAction",
                 "target": {
                     "@type": "EntryPoint",
-                    "urlTemplate": "https://smart-watch.netlify.app/search?q={search_term_string}"
+                    "urlTemplate": "https://https://smart-watch-shops.netlify.app/search?q={search_term_string}"
                 },
                 "query-input": " smart  watch=search_term_string"
             }
@@ -41,9 +41,9 @@
 
     <meta property="og:type" content="product">
 
-    <meta property="og:url" content="https://smart-watch.netlify.app/">
+    <meta property="og:url" content="https://smart-watch-shops.netlify.app/">
 
-    <meta property="og:image" content="https://smart-watch.netlify.app/preview.jpg">
+    <meta property="og:image" content="https://smart-watch-shops.netlify.app/preview.jpg">
 
     <meta property="og:site_name" content="smart-watch">
 
@@ -52,9 +52,9 @@
     <meta name="twitter:title" content="Buy Best Smartwatch - Features, Price, Reviews | Amazon">
 
     <meta name="twitter:description" content="Discover the Best smartwatch on Amazon! Explore its features like fitness tracking, heart rate monitoring, GPS, notifications, long battery life, and stylish design. Check prices, read reviews, and order yours today.">
-    <meta name="twitter:image" content="https://smart-watch.netlify.app/twitterpreview.jpg">
+    <meta name="twitter:image" content="https://smart-watch-shops.netlify.app/twitterpreview.jpg">
 
-    <link rel="canonical" href="https://smart-watch.netlify.app/">
+    <link rel="canonical" href="https://smart-watch-shops.netlify.app/">
 
 
 
