--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
     <link rel="canonical" href="https://smart-watch-shops.netlify.app/">
 
-
+    <!-- Google Search Console Verification meta tage/name -->
+    <meta name="google-site-verification" content="hBwn8XdYLUK8q1o3cNl9lDRNbainwQxkQiGDk5sdgZw" />
 
 </head>
 <body>
