--- a/index.html
+++ b/index.html
@@ -8,21 +8,13 @@
     <link rel="stylesheet" href="css/watchliststyle.css" />
 
     <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "WebSite",
-            "name": "Cheap Smart Watchs",
-            "url": "https://smart-watch-shops.netlify.app/",
-            "potentialAction": {
-                "@type": "SearchAction",
-                "target": {
-                    "@type": "EntryPoint",
-                    "urlTemplate": "https://https://smart-watch-shops.netlify.app/search?q={search_term_string}"
-                },
-                "query-input": " smart  watch=search_term_string"
-            }
-        }
-    </script>
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Smart Watches",
+      "url": "https://smart-watch-shops.netlify.app/"
+    }
+  </script>
 
     <title> Buy Best Price Smart Watch - Features, Ai , Fitness , Call , Record | Amazon | Smart-Watch
     </title>
